# Hacking_MCP_Servers_Agent

./: Dockerfile  README.md  UI.py  agents.py  blog.md  code_reader_agent.py  jimmy_old_file.py  main.py  main_old.py  pyproject.toml  tools.py
agents/: auditor.py  orchestrator.py
prompts/: auditor_prompts.py  manager_prompts.py  orchestrator_prompts.py  system_prompts.py
templates/: index.html
