[project]
name = "mcp-hacker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "markdownify>=1.1.0",
    "requests>=2.32.4",
    "smolagents[litellm]>=1.18.0",
    "uvicorn>=0.34.3",
    "starlette>=0.36.3",
    "anyio>=4.3.0",
    "python-multipart>=0.0.20",
]
